v5.0 整体架构升级